seperated a new function

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -8,6 +8,7 @@ body{
   width: 90% !important;
   padding: 0.5rem 2rem;
   border-radius: 20px;
+  margin-right: 10px;
 }
 .movie{
   padding: 2rem;
