--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1,9 +1,25 @@
+/* general rules */
 .pads{
-  padding: 4rem 0;
+  padding-top: 4rem ;
 }
 body{
   background: maroon;
 }
+h1{
+  color: white;
+}
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: darkgray;
+}
+/* general rules */
 #cerca{
   width: 90% !important;
   padding: 0.5rem 2rem;
@@ -29,4 +45,12 @@ body{
 }
 .cGold{
   color: gold;
+}
+
+#films, #tvSeries{
+ min-height: 30vh;
+ max-height: 68vh;
+ overflow-y: auto;
+ padding: 2rem;
+ margin-bottom: 2rem;
 }
