changed templates, and done the 3rd milestone

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -3,7 +3,8 @@
   padding-top: 4rem ;
 }
 body{
-  background: maroon;
+  background: black;
+  padding: 0 2rem;
 }
 h1{
   color: white;
@@ -11,19 +12,32 @@ h1{
 ::-webkit-scrollbar {
   width: 6px;
 }
+li{
+  padding-bottom: 0.5rem;
+}
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+  background: black; 
 }
  
 ::-webkit-scrollbar-thumb {
-  background: darkgray;
+  background: rgb(94, 93, 93);
+  border-radius: 5px;
 }
 /* general rules */
+/* header */
+header{
+  padding: 0.5rem 0;
+}
+header img{
+  width: 40%;
+}
+/* header */
 #cerca{
   width: 90% !important;
-  padding: 0.5rem 2rem;
-  border-radius: 20px;
+  padding: 0 1rem;
+  font-size:0.9rem;
+  border-radius: 10px;
   margin-right: 10px;
 }
 .movie{
@@ -48,9 +62,31 @@ h1{
 }
 
 #films, #tvSeries{
- min-height: 30vh;
- max-height: 68vh;
- overflow-y: auto;
- padding: 2rem;
+ min-height: 20vh;
+ max-height: 60vh;
+ overflow-x: auto;
+ overflow-y: hidden;
+ padding: 1rem 2rem;
  margin-bottom: 2rem;
+}
+
+/* card  */
+.cardBody{
+  width: 30rem;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 20rem;
+  margin-left: 2rem;
+  position: relative;
+  overflow-y: auto;
+}
+.cardBody .box{
+  display: none;
+  background: rgba(0, 0, 0, 0.72);
+  position: absolute;
+  width: 100%;
+  min-height: 100%;
+  height: auto;
+  padding: 2rem;
 }
