new ways learned from giovanni and added some transitions

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -4,13 +4,15 @@
 }
 body{
   background: black;
-  padding: 0 2rem;
+  padding: 0 3rem;
 }
 h1{
   color: white;
+  margin-bottom: 2rem;
 }
 ::-webkit-scrollbar {
   width: 6px;
+  height: 0.5rem;
 }
 li{
   padding-bottom: 0.5rem;
@@ -21,19 +23,25 @@ li{
 }
  
 ::-webkit-scrollbar-thumb {
-  background: rgb(94, 93, 93);
+  background: rgb(41, 41, 41);
+  border-radius: 5px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(66, 66, 66);
   border-radius: 5px;
 }
 /* general rules */
 /* header */
 header{
   padding: 0.5rem 0;
+  margin-bottom: 2rem;
 }
 header img{
   width: 40%;
 }
 /* header */
 #cerca{
+  min-width: 100px;
   width: 90% !important;
   padding: 0 1rem;
   font-size:0.9rem;
@@ -66,27 +74,33 @@ header img{
  max-height: 60vh;
  overflow-x: auto;
  overflow-y: hidden;
- padding: 1rem 2rem;
+ padding: 2rem 1rem 0 1rem;
  margin-bottom: 2rem;
 }
 
 /* card  */
 .cardBody{
-  width: 30rem;
+  width: 27rem;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 20rem;
-  margin-left: 2rem;
+  height: 18rem;
+  margin: 1rem ;
   position: relative;
   overflow-y: auto;
+  border-radius: 15px;
 }
 .cardBody .box{
-  display: none;
+  opacity: 0;
   background: rgba(0, 0, 0, 0.72);
   position: absolute;
   width: 100%;
   min-height: 100%;
   height: auto;
   padding: 2rem;
+  transition: opacity 0.8s;
+}
+.cardBody:hover .box{
+  opacity: 1;
+  cursor: pointer;
 }
