--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1,14 +1,13 @@
 /* general rules */
 .pads{
-  padding-top: 4rem ;
+  padding-top: 1rem ;
 }
 body{
   background: black;
-  padding: 0 3rem;
+  padding: 0 1.5rem 2rem 1.5rem;
 }
 h1{
   color: white;
-  margin-bottom: 2rem;
 }
 ::-webkit-scrollbar {
   width: 6px;
@@ -58,6 +57,7 @@ header img{
   width: calc((100% / 4) - 4rem);
   height: 400px;
   background: white;
+  
 }
 .title{
   color: maroon;
@@ -68,16 +68,23 @@ header img{
 .cGold{
   color: gold;
 }
-
+.wrapper{
+ background-size: contain;
+ background-position: center;
+ background-repeat: no-repeat;
+ position: fixed;
+ z-index: -1;
+ width: 100%;
+ height: 100%;
+ filter: blur(5px) grayscale(70%);
+ transition:  0.5s ease;
+}
 #films, #tvSeries{
- min-height: 20vh;
+ min-height: 30vh;
  max-height: 60vh;
  overflow-x: auto;
  overflow-y: hidden;
- padding: 2rem 1rem 0 1rem;
- margin-bottom: 2rem;
 }
-
 /* card  */
 .cardBody{
   width: 27rem;
