--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1,26 +1,26 @@
 /* general rules */
-.pads{
-  padding-top: 1rem ;
+.pads {
+  padding-top: 1rem;
 }
-body{
+body {
   background: black;
   padding: 0 1.5rem 2rem 1.5rem;
 }
-h1{
+h1 {
   color: white;
 }
 ::-webkit-scrollbar {
   width: 6px;
   height: 0.5rem;
 }
-li{
+li {
   padding-bottom: 0.5rem;
 }
 
 ::-webkit-scrollbar-track {
-  background: black; 
+  background: black;
 }
- 
+
 ::-webkit-scrollbar-thumb {
   background: rgb(41, 41, 41);
   border-radius: 5px;
@@ -31,23 +31,23 @@ li{
 }
 /* general rules */
 /* header */
-header{
+header {
   padding: 0.5rem 0;
   margin-bottom: 2rem;
 }
-header img{
+header img {
   width: 40%;
 }
 /* header */
-#cerca{
+#cerca {
   min-width: 100px;
   width: 90% !important;
   padding: 0 1rem;
-  font-size:0.9rem;
+  font-size: 0.9rem;
   border-radius: 10px;
   margin-right: 10px;
 }
-.movie{
+.movie {
   padding: 2rem;
   display: flex;
   flex-direction: column;
@@ -57,47 +57,48 @@ header img{
   width: calc((100% / 4) - 4rem);
   height: 400px;
   background: white;
-  
 }
-.title{
+.title {
   color: maroon;
 }
-.card{
+.card {
   margin: 1rem;
 }
-.cGold{
+.cGold {
   color: gold;
 }
-.wrapper{
- background-size: contain;
- background-position: center;
- background-repeat: no-repeat;
- position: fixed;
- z-index: -1;
- width: 100%;
- height: 100%;
- filter: blur(5px) grayscale(70%);
- transition:  0.5s ease;
+#backBg {
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: fixed;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  filter: blur(5px) grayscale(70%);
+  transition: 0.5s ease;
 }
-#films, #tvSeries{
- min-height: 30vh;
- max-height: 60vh;
- overflow-x: auto;
- overflow-y: hidden;
+#films,
+#tvSeries {
+  min-height: 30vh;
+  max-height: 60vh;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 /* card  */
-.cardBody{
+.cardBody {
   width: 27rem;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   height: 18rem;
-  margin: 1rem ;
+  margin: 1rem;
   position: relative;
   overflow-y: auto;
   border-radius: 15px;
+  background: gray;
 }
-.cardBody .box{
+.cardBody .box {
   opacity: 0;
   background: rgba(0, 0, 0, 0.72);
   position: absolute;
@@ -107,7 +108,7 @@ header img{
   padding: 2rem;
   transition: opacity 0.8s;
 }
-.cardBody:hover .box{
+.cardBody:hover .box {
   opacity: 1;
   cursor: pointer;
 }
